# RAG_WITH_RBAC_CHATBOT

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml  streamlit_app.py
app/: main.py
app/services/: embedding_service.py  llm_service.py  postgres_store.py  rag_service.py  users_data.py
resources/: local.db
tests/: conftest.py  test_api.py
